# Megalo

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: build.yml
docs/: audit_dsp_ui.md  hn_polyphony_testing.md  lv2-to-multiplatform.md
juce/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  megalo_presets.h
megalo.lv2/: Cathedral.ttl  Choir.ttl  Clean_Sustain.ttl  Drone.ttl  Fast.ttl  Frozen_Strings.ttl  Glass.ttl  Good.ttl  Good_2.ttl  Grainy.ttl  Octave_Pad.ttl  Octaver.ttl  Shimmer.ttl  Sub_Bass.ttl  manifest.ttl  megalo.ttl  modgui.ttl
megalo.lv2/modgui/: icon-megalo.html  script-megalo.js  stylesheet-megalo.css
megaloHN.lv2/: Cathedral.ttl  Choir.ttl  Clean_Sustain.ttl  Drone.ttl  Fast.ttl  Frozen_Strings.ttl  Glass.ttl  Good.ttl  Good_2.ttl  Grainy.ttl  Octave_Pad.ttl  Octaver.ttl  Shimmer.ttl  Sub_Bass.ttl  manifest.ttl  megaloHN.ttl  modgui.ttl
megaloHN.lv2/modgui/: icon-megalo.html  script-megalo.js  stylesheet-megalo.css
plugins/package/megalo/: megalo.mk
plugins/package/megalohn/: megalohn.mk
src/: additive_synth.hpp  biquad.hpp  envelope.hpp  freeze_engine.hpp  glibc_compat.cpp  granular_looper.hpp  hn_analyzer.hpp  hn_fft.hpp  hn_multif0.hpp  hn_nnls.hpp  hn_poly_synth.hpp  hn_quality.hpp  hn_state.hpp  megaloHN_dsp.cpp  megalo_dsp.cpp  megalo_dsp.h  phase_vocoder.hpp  plugin.cpp  rave_engine.hpp  spectral_freeze.hpp
tools/: click_test.cpp  gen_presets.py  grain_test.cpp  hn_diag.cpp  hn_env_test.cpp  hn_render.cpp  hn_test.cpp  hn_wav.cpp  modgui_screenshot.js  pv_test.cpp  release_test.cpp
